# cg

./: .gitmodules  CMakeLists.txt  Makefile  README.md  imgui.ini  main.cpp  resources.cpp
glad/include/glad/: gl.h
shaders/: rain.frag  rain.vert
src/: droplets.h  dropletsVertex.h  main.cpp  rain.cpp  rain.h  resources.cpp  resources.h  shader_utils.cpp  shader_utils.h  window.cpp  window.h
src/shaders/: rain.frag  rain.vert
